<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical"
                android:weightSum="5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/txt_gyro_name"
                    android:textStyle="bold"
                    android:textColor="@color/gold"
                    android:text="@string/gyro_name" />

                <TextView
                    android:id="@+id/txt_show_gyro_pitch"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/textview_margin"
                    android:layout_weight="1"
                    android:text="@string/gyro_pitch" />

                <TextView
                    android:id="@+id/txt_show_gyro_roll"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/textview_margin"
                    android:layout_weight="1"
                    android:text="@string/gyro_roll" />

                <TextView
                    android:id="@+id/txt_show_gyro_yaw"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/textview_margin"
                    android:layout_weight="1"
                    android:text="@string/gyro_yaw" />

                <TextView
                    android:id="@+id/txt_show_gyro_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/textview_margin"
                    android:layout_weight="1"
                    android:text="@string/gyro_timestamp" />

            </LinearLayout>

<!--            <Button-->
<!--                android:id="@+id/btn_gyro_switch"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="4dp"-->
<!--                android:layout_weight="3"-->
<!--                android:text="@string/gyro_switch" />-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
